# SimpleMeshViewer

./: README.md
SimpleViewer/: CMakeLists.txt
SimpleViewer/Demo/: view_test.bat
SimpleViewer/Viewer/: view_mesh.cpp
